data/derived/comb/progs/unify/prog3829.ml.out
Characters 103-104:
  | Sine(x)		-> sin (eval (pi *. x) )
                                 ^
Error: This expression has type expr but an expression was expected of type
         float
